--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Rachana",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "instamojo-nodejs": "^0.0.5",
